0.3.0
    the instructions of the web response does not contain times (string) but instead millis (long)
    PrepareContractionHierarchies.setPeriodicUpdates is now in percentage not in absolute counts
    gpx export via API or HTTP (route?type=gpx)
    breaking: The web response, Path.time and GHResponse.time change to milliseconds and 'long' (instead of seconds and double)

0.2.0
    change inconsistent default settings for contraction hierarchies in the API - see https://lists.openstreetmap.org/pipermail/graphhopper/2013-December/000585.html
    fixed issues with android:
        graphhopper: use maps from 0.2 path; updated maps
        mapsforge: use mapsforge-map dependency; merged #461; avoid duplicates otherwise mapsforge-core would be duplicate (?)
    refactored/renamed classes and methods:
        refactor 'flags' from int to long (still only int is stored)
        replacing Graph.edge(a,b,dist,flags) by Graph.edge(a,b).setDistance().setFlags()
        FlagEncoder.flags => use FlagEncoder.setProperties or separate setAccess and setSpeed method
        renamed LocationIDResult to QueryResult and Location2NodesNtree to LocationIndexTree
        renamed Location2IDIndex to LocationIndex
        renamed WeightCalculation to Weighting and getWeight to calcWeight        
            the URL parameter algoType in web module is now deprecated and 'weighting' should be used
        removed GHDijkstraHeap, GHDijkstraHeap2    
        made DistanceCalc into interface (new DistanceCalcEarth implementation)
        made GraphStorage into interface (new GraphHopperStorage implementation) move some methods from Graph into GraphStorage -> optimize + node removal stuff -> not necessary in algorithms
    incompatible storage layout due to:
        pluggable endianness (#103) -> changed default endianess to LITTLE
    add highly experimental UnsafeDataAccess to speed up search ~15%
    several small bug fixes and improvements
    different edge insert